--- a/wix/lingpdf.wxs
+++ b/wix/lingpdf.wxs
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
   <Product Id="*"
-           Name="LightPDF"
+           Name="LingPDF"
            Language="1033"
            Version="1.0.0"
-           Manufacturer="LightPDF Team"
+           Manufacturer="LingPDF Team"
            UpgradeCode="12345678-1234-1234-1234-123456789012">
     
     <Package InstallerVersion="200"
@@ -15,7 +15,7 @@
     <MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
     <MediaTemplate EmbedCab="yes" />
 
-    <Feature Id="ProductFeature" Title="LightPDF" Level="1">
+    <Feature Id="ProductFeature" Title="LingPDF" Level="1">
       <ComponentGroupRef Id="ProductComponents" />
       <ComponentRef Id="ApplicationShortcut" />
     </Feature>
@@ -25,12 +25,12 @@
 
     <Directory Id="TARGETDIR" Name="SourceDir">
       <Directory Id="ProgramFiles64Folder">
-        <Directory Id="INSTALLFOLDER" Name="LightPDF">
+        <Directory Id="INSTALLFOLDER" Name="LingPDF">
           <Component Id="MainExecutable" Guid="*">
-            <File Id="LightPDF.exe" Source="target\\release\\lightpdf.exe" KeyPath="yes">
+            <File Id="lingpdf.exe" Source="target\\release\\lingpdf.exe" KeyPath="yes">
               <Shortcut Id="StartMenuShortcut"
                         Directory="ProgramMenuFolder"
-                        Name="LightPDF"
+                        Name="LingPDF"
                         WorkingDirectory="INSTALLFOLDER"
                         Icon="AppIcon.ico"
                         Advertise="yes" />
@@ -43,16 +43,16 @@
       </Directory>
       
       <Directory Id="ProgramMenuFolder" Name="Programs">
-        <Directory Id="ApplicationProgramsFolder" Name="LightPDF">
+        <Directory Id="ApplicationProgramsFolder" Name="LingPDF">
           <Component Id="ApplicationShortcut" Guid="*">
             <Shortcut Id="ApplicationStartMenuShortcut"
-                      Name="LightPDF"
+                      Name="LingPDF"
                       Description="A lightweight PDF reader"
-                      Target="[#LightPDF.exe]"
+                      Target="[#lingpdf.exe]"
                       WorkingDirectory="INSTALLFOLDER"
                       Icon="AppIcon.ico" />
             <RemoveFolder Id="ApplicationProgramsFolder" On="uninstall" />
-            <RegistryValue Root="HKCU" Key="Software\\LightPDF" Name="installed" Type="integer" Value="1" KeyPath="yes" />
+            <RegistryValue Root="HKCU" Key="Software\\LingPDF" Name="installed" Type="integer" Value="1" KeyPath="yes" />
           </Component>
         </Directory>
       </Directory>
